tests/fixtures/invalid/pow_str_bytes_int.py
# Cannot call pow() with Str, Bytes, Int
x = pow("hello", b"hello", 1)
